--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,14 @@ uuid = "df126d66-b6ac-11e9-1558-59a14e4bac76"
 authors = ["Milan Kloewer"]
 version = "0.1.0"
 
+[deps]
+Jenks = "ea09bcba-b530-11e9-285d-9b3245f059b3"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
 [compat]
-julia = "1.1"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
