--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+SoftPosit = "0775deef-a35f-56d7-82da-cfc52f91364d"
 
 [targets]
-test = ["Test"]
+test = ["Test","SoftPosit"]
