--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Milan Kloewer"]
 version = "0.1.0"
 
 [deps]
+Jenks = "ea09bcba-b530-11e9-285d-9b3245f059b3"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
